--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,24 +5,28 @@
 # See https://docs.docker.com/engine/reference/builder/
 # for more information.
 #
-FROM nvcr.io/nvidia/cuda:10.1-cudnn7-runtime
+#FROM nvcr.io/nvidia/cuda:10.1-cudnn7-runtime
+FROM nvidia/cuda:10.0-base-ubuntu18.04
+
+RUN apt-key del 7fa2af80
+RUN apt-key adv --fetch-keys https://developer.download.nvidia.com/compute/cuda/repos/ubuntu1804/x86_64/3bf863cc.pub
 
 # python
-RUN apt update
-RUN apt upgrade -y --no-install-recommends
 RUN apt-get update
-RUN apt-get install gcc g++ python3 python3-pip python3-dev libglib2.0-0 libgl1-mesa-glx -y --no-install-recommends
+RUN apt-get upgrade -y --no-install-recommends
+RUN apt-get update
+RUN apt-get install gcc g++ python3 python3-pip python3-dev libglib2.0-0 libgl1-mesa-glx unzip -y --no-install-recommends
 
 # Install pip packages
 RUN pip3 install --upgrade setuptools
 RUN pip3 install --upgrade pip
-RUN pip3 install torch==1.7.1+cu101 torchvision==0.8.2+cu101 -f https://download.pytorch.org/whl/torch_stable.html
+RUN pip3 install torch==1.9.0+cu111 torchvision==0.10.0+cu111 -f https://download.pytorch.org/whl/torch_stable.html
 RUN pip3 install tensorboard
 RUN pip3 install -Iv tensorboardx==2.1 matplotlib==3.2.2 opencv-python==4.5.1.48
 RUN pip3 install numpy==1.19.4 sklearn Pillow==8.0
 
 # git and wget
-RUN apt-get udpate
+RUN apt-get update
 RUN apt install git wget -y --no-install-recommends
 
 # cmake
@@ -82,3 +86,14 @@ RUN cd /workspace && \
  cmake -D CMAKE_BUILD_TYPE=RELEASE -D CMAKE_INSTALL_PREFIX=/usr/local -D OPENCV_GENERATE_PKGCONFIG=ON .. && \
  make && \
  make install
+
+# hero
+RUN git clone https://github.com/utiasASRL/hero_radar_odometry && \
+ chmod +x hero_radar_odometry/download_models.sh
+# cd hero_radar_odometry && \
+# mkdir cpp/build && \
+# cd cpp/build  && \
+# cmake .. && make \
+
+# Prep hero
+RUN cd /workspace && mkdir hero_radar_odometry && cd hero_radar_odometry && ../../hero_radar_odometry/download_models.sh
